<resources>
    <string name="app_name">SeriesManager</string>
    <string name="remove">Remover</string>
    <string name="edit">Editar</string>
    <string name="add_serie">Adicionar série</string>
    <string name="text_view_serie">Série</string>
    <string name="text_view_release">Ano de lançamento</string>
    <string name="text_view_producer">Emissora</string>
    <string name="save_button">Salvar</string>
    <string name="view">Visualizar</string>
    <string name="add_season">Adicionar temporada</string>
    <string name="numero_sequencial">Número sequencial</string>
    <string name="quantidade_episodios">Quantidade episódios</string>
    <string name="adicionar_episodio">Adicionar episódio</string>
    <string name="nome_episodio">Nome do episódio</string>
    <string name="duration">Duração</string>
    <string name="assistido">Assistido</string>
</resources>