<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/sequenceEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero_sequencial"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_episodio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/durationEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/duration"
        android:inputType="number"
        android:minHeight="48dp"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/watchedCk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assistido" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button" />

</LinearLayout>